Fix horizontal clipping bug with media boxes

--- a/src/pages/MediaCoverage.css
+++ b/src/pages/MediaCoverage.css
@@ -15,6 +15,20 @@
   font-size: 16px;
   margin-bottom: 10px;
 }
+
+.article-grid {
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 3rem;
+}
+
+@media (max-width: 767px) {
+  .article-grid {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
 body {
   font-family: "Montserrat", sans-serif;
 }
